--- a/Data/ToDo.txt
+++ b/Data/ToDo.txt
@@ -2,12 +2,13 @@ Todo:
 ----------------------------------
  Core:
  - Multiple troops 
- - Troop buying
- - load mapSettings from json
- - 
+ - Money
+ 
+ GamePlay:
+ - Balancing
    
   UI:
- 
+ - Directional Facing of Units
  - Revamp UI for Save / Load (Button / Box / Scene)
  
  Audio:
@@ -24,11 +25,13 @@ Ideas:
 Nice to have:
 ----------------------------------
  - Make palace hitbox != circle (any distance calc)
+ - Multiple Modes (Only Push, Fast, Clicker,...?)
  
  
 WIP:
 ----------------------------------
- 
+ - Troop buying
+ - Screen Rotation
 
 Done:
 ----------------------------------
@@ -36,3 +39,4 @@ Done:
  - Background MainMenu
  - Save / Load Games (Cookies)
  - GameoverScene show elapsed time
+ - load mapSettings from json
