--- a/Data/ToDo.txt
+++ b/Data/ToDo.txt
@@ -4,6 +4,9 @@ Todo:
  - Multiple troops 
  - Money
  - Fix Time Display when rotated
+ - Move Rotatotor & click fix to GameFrame
+ - Fix Names
+ - SpawnSounds for different types
  
  GamePlay:
  - Balancing
@@ -32,7 +35,6 @@ Nice to have:
 WIP:
 ----------------------------------
  - Troop buying
- - Screen Rotation
 
 Done:
 ----------------------------------
@@ -41,3 +43,4 @@ Done:
  - Save / Load Games (Cookies)
  - GameoverScene show elapsed time
  - load mapSettings from json
+ - Screen Rotation
