--- a/Data/ToDo.txt
+++ b/Data/ToDo.txt
@@ -4,7 +4,6 @@ Todo:
  
  - Money
  - Fix Time Display when rotated
- - Move Rotatotor & click fix to GameFrame
  - Fix Method & var Names
  - SpawnSounds for different types
  - display mode & exit selection on click
@@ -29,13 +28,13 @@ Ideas:
  
 Nice to have:
 ----------------------------------
- - Make palace hitbox != circle (any distance calc)
- - Multiple Modes (Only Push, Fast, Clicker,...?)
+ - Move Rotatotor & click fix to GameFrame
  
  
 WIP:
 ----------------------------------
- 
+ EG:
+ - Fix rotated image for units in "rotated" mode
  
  
 Done:
@@ -51,3 +50,5 @@ Done:
  - Multiple troops (Marker for selected)
  - Directional Facing of Units
  - Fixed bug where game resumed in CityScene when Shop was open and pause toggled twice
+ - Make palace hitbox != circle (any distance calc)
+ - Multiple Modes (Only Push, Fast, Clicker,...?)
