--- a/Data/ToDo.txt
+++ b/Data/ToDo.txt
@@ -3,8 +3,8 @@ Todo:
  Core:
  - SpawnSounds for different types
  - display mode & exit selection on click
- - troop number overlay (0-9 for selecting this unit)
- - send selectred troop in HeadQuarter when pressing "Q"
+ - troop number overlay (0-9 for selecting this unit) / fix Tab selection (killed troops)
+
  - setting for default mode
  - use different sprites for rebels (change RebelDefault.ImageName to list)
  - allow setting troop binding (0-9)
@@ -14,6 +14,7 @@ Todo:
  - Base/Palace Health
  - Change interval calculation to baseIntervall * factor / time 
  - SafeZoneRadius into settings
+
  
  
  GamePlay:
@@ -85,3 +86,4 @@ Done:
  - disable shop per gamesettings
  - PauseMenuButton sprite
  - Money
+ - send selectred troop in HeadQuarter when pressing "Q"
