--- a/Data/ToDo.txt
+++ b/Data/ToDo.txt
@@ -18,6 +18,7 @@ Todo:
  
  
  
+ 
  GamePlay:
  - Balancing
    
@@ -45,6 +46,7 @@ Refactoring:
  - replace if (Screen.width < ..hight) with global call
  - Remove hardcoded references to mapsize (mostly unit scaling)
  - UnitScaling with targetSize (relative width, keep ratio?)
+ - Change Pos_x & Pos_y in defaults to GameFrame.Core.Math.Vector2
 
 Ideas:
 ----------------------------------
@@ -61,6 +63,7 @@ Nice to have:
 ----------------------------------
  - Text editor to supply us for JSON data
  - Variable Rebel Strength 
+ - Bases in json (linked via unique ID to troops)
  
 WIP:
 ----------------------------------
