--- a/Data/ToDo.txt
+++ b/Data/ToDo.txt
@@ -5,27 +5,22 @@ Todo:
 
  Core:
  - UnitTypes (Rebel & Troops)
- - SpawnSounds for different types
- - setting for default mode 
  - Blockade/Palisade (#possible movments counter)
  - Change interval calculation to baseIntervall * factor / time 
  - Deactivate Destroyed MilitaryBase (no interaction, no healthbar, destroyed image)
- - Button Sounds in GameModeMenu
   
  GamePlay:
  - Balancing
    
  UI:
  - Revamp UI for Save / Load (Button / Box / Scene)
- - Revamp MainMenu (eg. protest shield with game mode for starting new game)
- - Display Unit Strength (hover over? Strenght Symbol?)
  - CityScene HUD overhaul (eg. Buttons same size, image background)
- - display mode & exit selection on click 
+ - Background for Menues: GameMode, SaveLoad ...
  
  Audio:
  - Effects
  - Sound Volume
- - Sound onButtonclick in Main Menu for ReloadSettings, Modes (and all Modes)
+ - SpawnSounds for different types
  
  Itch.io:
  - Add description
@@ -42,7 +37,18 @@ Refactoring:
  - Remove hardcoded references to mapsize (mostly unit scaling)
  - UnitScaling with targetSize (relative width, keep ratio?)
  - Change Pos_x & Pos_y in defaults to GameFrame.Core.Math.Vector2
+ 
+WIP:
+----------------------------------
 
+ 
+Nice to have:
+----------------------------------
+ - Text editor to supply us for JSON data
+ - Variable Rebel Strength 
+ - Bases in json (linked via unique ID to troops)
+ - Display Unit Strength (hover over? Strenght Symbol?)
+ 
 Ideas:
 ----------------------------------
  - Power Ups
@@ -53,15 +59,6 @@ Ideas:
  - Unit Movement Queue
  - Restrict Movement Range (eg. Palace Guards)
  - Buy Health Packages For Palace
- 
-Nice to have:
-----------------------------------
- - Text editor to supply us for JSON data
- - Variable Rebel Strength 
- - Bases in json (linked via unique ID to troops)
- 
-WIP:
-----------------------------------
  
  
 Done:
@@ -96,3 +93,8 @@ Done:
  - use different sprites for rebels (change RebelDefault.ImageName to list) (Same for troops)
  - Base/Palace Health
  - Multiple Bases (MilitaryBase)
+ - Button Sounds in GameModeMenu
+ - Revamp MainMenu (eg. protest shield with game mode for starting new game)
+ - display mode & exit selection on click 
+ - setting for default mode 
+ - Sound onButtonclick in Main Menu for ReloadSettings, Modes (and all Modes)
