--- a/Data/ToDo.txt
+++ b/Data/ToDo.txt
@@ -2,6 +2,7 @@ Todo:
 ----------------------------------
  Exceptions:
  - If base is under attack and game is paused, base is destroyed => gameOver. Next game time does not start
+ - Shop: show more digits for Palace Guards speed.
 
  Core:
  - UnitTypes (Rebel & Troops)
