--- a/Data/ToDo.txt
+++ b/Data/ToDo.txt
@@ -3,6 +3,8 @@ Todo:
  Exceptions:
  - If base is under attack and game is paused, base is destroyed => gameOver. Next game time does not start
  - Shop: show more digits for Palace Guards speed.
+ - shortkey for shop
+ - new shortkey for pause to not conflict with fullscreen
 
  Core:
  - UnitTypes (Rebel & Troops)
@@ -52,6 +54,8 @@ Nice to have:
  - Variable Rebel Strength 
  - Bases in json (linked via unique ID to troops)
  - Display Unit Strength (hover over? Strenght Symbol?)
+ - Mark Unit not Available if not enought money
+ - statistics which mode was played how often
  
 Ideas:
 ----------------------------------
